<resources>
    <string name="app_name">Pixbar</string>
    <string name="show_button_fill">Show Button Fill</string>
    <string name="scale">Scale</string>
    <string name="spacing">Spacing</string>
    <string name="preview">Preview</string>
    <string name="apply">apply</string>
    <string name="show_guides">Show Guides</string>
    <string name="color_palette">Color Palette</string>
    <string name="color">Color</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="developer">developer</string>
    <string name="jaxon_wright">Jaxon Wright</string>
    <string name="libraries">AppIntro by Paolo Rotolo\nMaterial Dialogs by Aiden Follestad\nButterknife by Jake Wharton</string>
    <string name="libraries_used">libraries used</string>
    <string name="run_on_boot">Run on Boot</string>
    <string name="styleLabel">Style</string>
    <string name="testers">Testers</string>
    <string name="testersNames">Chris Bement (LG G6)\nJosh Veerkamp (Other LG)</string>
    <string name="report_issues_feature_requests">Report issues / feature requests</string>
    <string name="email">send email</string>
    <string name="issue_tracker">issue tracker</string>
    <string name="button_order">Button Order</string>

    <string-array name="style_array">
        <item>Small Ring</item>
        <item>Big Ring</item>
        <item>Fill</item>
    </string-array>

    <string-array name="order_array">
        <item>Standard</item>
        <item>Flipped</item>
    </string-array>
</resources>
