<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="16dp"
    tools:context="com.dunrite.pixelfy.MainActivity">


    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serviceToggle"
        android:checked="false"
        android:text="@string/show_button_fill"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:text="@string/scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/scaleLabel"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scaleBar"
        android:layout_below="@+id/scaleLabel"
        android:progress="50"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:text="@string/spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scaleBar"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/spacingLabel"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spacingBar"
        android:layout_below="@+id/spacingLabel"
        android:progress="50"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:text="@string/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/previewLabel"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/spacingBar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <RelativeLayout
        android:id="@+id/navbarPreview"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/previewLabel"
        android:clipChildren="false">

        <ImageView
            app:srcCompat="@android:color/black"
            android:layout_centerHorizontal="true"
            android:id="@+id/mockNavbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/home"
            android:id="@+id/homeButton"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="85dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/recents"
            android:id="@+id/recentsButton"
            android:layout_toEndOf="@id/homeButton"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back"
            android:id="@+id/backButton"
            android:layout_toStartOf="@id/homeButton"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

    <Button
        android:text="@string/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navbarPreview"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/applyButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />




</RelativeLayout>
